--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "07-Rest-Server",
+  "name": "10-Socket-Chat-Rest-Server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
     "google-auth-library": "^7.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
+    "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
   }
 }
